--- a/css/style_tambah_data.css
+++ b/css/style_tambah_data.css
@@ -19,12 +19,9 @@ body{
 	padding-top: 10px;
 	font-size: 32px;
 }
-.add button{
-	margin-left: 60px;
-	width: 100px;
-	margin-bottom: 10px;
-}
+
 .nav{
+	width: 100%;
 	background-color: #168abd;
 	padding: 10px;
 }
@@ -51,10 +48,16 @@ body{
 }
 .input_data{
 	width: 500px;
-	background-color: #ccc;
+	background-color: #eee;
 	margin: 0px auto;
 	padding: 30px;
 	border-radius: 10px;
+	transition: .4s;
+	box-shadow: 0px 0px 15px #aaa;
+}
+.input_data:hover{
+	box-shadow: 0px 0px 5px #aaa;
+	transition: .4s;
 }
 .input_data li{
 	list-style: none;
